--- a/src/modules/users/components/ConnectWalletWizard/StepGanache/StepGanache.css
+++ b/src/modules/users/components/ConnectWalletWizard/StepGanache/StepGanache.css
@@ -22,3 +22,7 @@
 .content button i {
   min-width: 10px;
 }
+
+.content button > div {
+  height: 21px;
+}
